<resources>
    <string name="app_name">Portfolio</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btnUbiquitous">Go Ubiquitous</string>
    <string name="btnPopMovies">Popular Movies</string>
    <string name="btnStockHawk">Stock Hawk</string>
    <string name="btnBuildItBigger">Build it Bigger</string>
    <string name="btnAppMaterial">Make your app material</string>
    <string name="btnCapstone">Capstone: my own app</string>
    <string name="textView">Eliel\'s Nanodegree Apps</string>
</resources>
