<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:text="@string/textView"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:id="@+id/textView"
                android:gravity="center"                
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#ffffff" />

            <Button
                android:text="@string/btnPopMovies"
                android:layout_height="wrap_content"
                android:id="@+id/btnPopMovies"
                android:layout_width="250dp"
                android:textAlignment="center"
                android:onClick="openApp"
                style="@style/customButton"/>

            <Button
                android:text="@string/btnStockHawk"
                android:layout_height="wrap_content"
                android:id="@+id/btnStockHawk"
                android:layout_width="250dp"
                android:textAlignment="center"
                android:onClick="openApp"
                style="@style/customButton"/>

            <Button
                android:text="@string/btnBuildItBigger"
                android:layout_height="wrap_content"
                android:id="@+id/btnBuildItBigger"
                android:layout_width="250dp"
                android:textAlignment="center"
                android:onClick="openApp"
                style="@style/customButton"/>

            <Button
                android:text="@string/btnAppMaterial"
                android:layout_height="wrap_content"
                android:id="@+id/btnAppMaterial"
                android:layout_width="250dp"
                android:textAlignment="center"
                android:onClick="openApp"
                style="@style/customButton"/>

            <Button
                android:text="@string/btnUbiquitous"
                android:layout_height="wrap_content"
                android:id="@+id/btnUbiquitous"
                android:layout_width="250dp"
                android:onClick="openApp"
                style="@style/customButton" />

            <Button
                android:text="@string/btnCapstone"
                android:layout_height="wrap_content"
                android:id="@+id/btnCapstone"
                android:layout_width="250dp"
                android:textAlignment="center"
                android:onClick="openApp"
                style="@style/customButton" />
        </LinearLayout>

</ScrollView>
